--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
+    "start": "babel . --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch",
     "test": "live-server --open=./SpecRunner.html --port=8081",
-    "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash"
+    "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash",
+    "babelWatch": "babel . --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.2",
@@ -20,7 +22,9 @@
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-watch": "^2.0.6",
     "chai": "^3.5.0",
+    "live-server": "^1.2.0",
     "mocha": "2.3.3",
     "sinon": "1.17.3"
   }
