--- a/package.json
+++ b/package.json
@@ -1,31 +1,38 @@
 {
-  "name": "recast.ly",
-  "version": "1.1.0",
-  "description": "Making YouTube with React and ES6",
-  "author": "Hack Reactor <curriculum.team@hackreactor.com>",
-  "license": "UNLICENSED",
-  "private": true,
-  "scripts": {
-    "start": "babel . --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch",
-    "test": "live-server --open=./SpecRunner.html --port=8081",
-    "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash",
-    "babelWatch": "babel . --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch"
-  },
+  "name": "appcomer",
+  "version": "1.0.0",
+  "description": "App to look for restaurants based on your location",
+  "main": "index.js",
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.2",
+    "body-parser": "*",
+    "bootstrap": "^4.0.0",
+    "express": "^4.15.0",
+    "live-server": "^1.2.0",
     "jquery": "^2.2.1",
-    "lodash": "^4.6.1",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+
   },
   "devDependencies": {
-    "babel-cli": "^6.6.5",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-watch": "^2.0.6",
-    "chai": "^3.5.0",
-    "live-server": "^1.2.0",
-    "mocha": "2.3.3",
-    "sinon": "1.17.3"
-  }
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.2",
+    "babel-preset-env": "*",
+    "babel-preset-react": "6.23.0",
+    "webpack": "^2.2.1"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "react-dev": "webpack -d --watch",
+    "start": "nodemon server/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/App-Comer/appcomeroficial.git"
+  },
+  "author": "Richie Varona, Armando Cano, Juan Tejeda",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/App-Comer/appcomeroficial/issues"
+  },
+  "homepage": "https://github.com/App-Comer/appcomeroficial#readme"
 }
