--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "*",
-    "bootstrap": "^4.0.0",
+    "bootstrap": "*",
     "express": "^4.15.0",
     "live-server": "^1.2.0",
     "jquery": "^2.2.1",
@@ -13,16 +13,19 @@
     "react-dom": "^16.3.1"
   },
   "devDependencies": {
-    "babel-core": "^6.23.1",
+    "babel-cli": "^6.6.5",
     "babel-loader": "^6.3.2",
-    "babel-preset-env": "*",
+    "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.23.0",
+    "popper": "^1.0.1",
     "webpack": "^2.2.1"
   },
   "scripts": {
+    "live": "live-server --open=./public/index.html",
+    "start": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "react-dev": "webpack -d --watch",
-    "start": "nodemon server/index.js"
+    "babelWatch": "babel . --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled --source-maps inline --watch"
   },
   "repository": {
     "type": "git",
