--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "webpack": "^2.2.1"
   },
   "scripts": {
-    "live": "live-server --open=./public/index.html",
+    "live": "live-server --open=./index.html",
     "start": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "react-dev": "webpack -d --watch",
