--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "body-parser": "*",
     "bootstrap": "*",
     "express": "^4.15.0",
-    "live-server": "^1.2.0",
     "jquery": "^2.2.1",
+    "live-server": "^1.2.0",
+    "lodash": "^4.17.5",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "react-google-maps": "^9.4.5"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
